# software-renderer

./: .gitignore  CMakeLists.txt  build.sh  run.sh
include/: arena.h  color.h  entity.h  font.h  gui.h  sprite.h  vector.h  window.h
output/: run
source/: arena.c  arena.h  color.c  color.h  font.c  font.h  main.c  sprite.c  sprite.h  window.c  window.h
